Basic html outline

--- a/index.html
+++ b/index.html
@@ -3,6 +3,37 @@
     <title></title>
   </head>
   <body>
+    <h1>Aj Printing</h1>
+    <!-- what i offer -->
+    <h2>What I offer</h2>
+    <p>I offer competitive pricing on items such as...</p>
+    <ul>
+      <li>Banners</li>
+      <li>Brochures</li>
+      <li>Business cards</li>
+      <li>Flyers</li>
+      <li>Labels</li>
+      <li>Magnets</li>
+      <li>Postcards</li>
+      <li>Posters</li>
+      <li>Stickers</li>
+    </ul>
+    <!-- pricing -->
+    <h3>Pricing</h3>
+    <p>I price my products relative to what the company i work for charges,
+    I'm willing to do price comparisons on all products to garentee you're getting the most for what you pay for.</p>
+    <!-- why me -->
+    <h3>Why me</h3>
+    <p>You should choose me because unlike most print brokering sites,
+      I work as the pressman processing your orders on a day to day basis,
+      and because of this I can pull as many strings as possible to get you the some of the lowest pricing for high quality printing.</p>
+      <!-- standard control -->
+    <h3>Standard control</h3>
+    <p>Since I work at the press that is printing your items,
+       I am in direct control of the quality of your items.</p>
+       <!-- approval -->
+    <h3>Your approval is the most important thing</h3>
+    <p>If it doesn’t meet your professional standards to the last detail it doesn't ship out</p>
 
   </body>
 </html
