New updates to html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
     <!-- pricing -->
     <h3>Pricing</h3>
-    <p>I price my products relative to what the company i work for charges,
+    <p>I price my products relative to what the company I work for charges,
     I'm willing to do price comparisons on all products to garentee you're getting the most for what you pay for.</p>
     <!-- why me -->
     <h3>Why me</h3>
@@ -33,7 +33,7 @@
        I am in direct control of the quality of your items.</p>
        <!-- approval -->
     <h3>Your approval is the most important thing</h3>
-    <p>If it doesn’t meet your professional standards to the last detail it doesn't ship out</p>
+    <p>If it doesn't meet your professional standards to the last detail it doesn't ship out.</p>
 
   </body>
 </html
